2007-01-30  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainertreeview.c
	(gimp_container_tree_view_button_press): corrected the GTK+
	version check. Closes bug #348347 again.

2007-01-26  Sven Neumann  <sven@gimp.org>

	* docs/gimp.1.in: fixed markup (bug #401145)

2007-01-22  Tor Lillqvist  <tml@novell.com>

	Merge from trunk, fixes bug #398726:

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_image): Add
	workaround for a problem that occurs on Win32 when one has opened
	an image from the root of a drive letter and then does Save As.

2007-01-22  Michael Schumacher  <schumaml@cvs.gnome.org>

	* plug-ins/script-fu/scripts/guides-new-percent.scm: replaced
	license statement according to bug #119667.

2007-01-09  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* tools/gimp-remote.c (gimp_remote_find_window): check Atoms
	before using them. Fixes bug #392111.

2007-01-04  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* libgimpwidgets/gimppreviewarea.c: fixed clipping (bug #392692).

2006-12-12  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/burn-in-anim.scm: Don't allow one of the
	two layers to be a floating selection. Fixes bug #384096.

2006-11-23  Sven Neumann  <sven@gimp.org>

	* tips/Makefile.am (tips_POFILES): removed no.po.

2006-11-23  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch (fix by Simon Budig):

	* app/xcf/xcf-load.c: load the channels in the proper order;
	fixes bug #378003.

2006-11-15  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch (fix by Mukund Sivaraman):

	* plug-ins/FractalExplorer/FractalExplorer.c
	* plug-ins/FractalExplorer/Dialogs.c: Fixed bug #372671 and made
	loglog smoothing work again.

2006-11-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/randomize.c: fixed possible buffer overflow
	(bug #375295).

2006-11-07  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove no from ALL_LINGUAS.
	* po-libgimp/no.po:
	* po-plug-ins/no.po: