@@ -1,3 +1,10 @@
+2007-02-03  Mukund Sivaraman  <muks@mukund.org>
+
+	* plug-ins/common/psd_save.c: Backported fixes from bug #335130 to
+	  this branch to make psd_save work properly on 64-bit platforms;
+	  this should fix #384762; also fixed a warning about incompatible
+	  data types
+
 2007-01-30  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpcontainertreeview.c
